# site

./: .gitignore  .travis.yml  CNAME  CONTRIBUTORS.md  README.md  index.html  pyproject.toml
css/: index.css
en/: index.html
en/events/: index.html
en/instagram/: index.html
en/organizers/: index.html
en/privacy-policy/: index.html
events/: index.html
events/between-heaven-and-earth/: index.html
events/endlesssummer/: index.html
events/frozenlily/: index.html
events/global-day-of-coderetreat-2021-sochi/: index.html
events/hi-tech-sochi/: index.html
events/it-sochi-frontend-miniconf-2022/: index.html
events/itsochi-tech-bar/: index.html
events/itsochiandyandexgo/: index.html
events/july-meetup-evening-of-knowledge/: index.html
events/meet_one_to_one/: index.html
events/meetup2/: index.html
events/nemeetup/: index.html
events/phoenix/: index.html
events/pyconweekend/: index.html
events/siriusanditsochimeetup/: index.html
events/summersunset/: index.html
events/tinkoffit-sochi/: index.html
events/yandexgoanditsochi/: index.html
instagram/: index.html
itsochi/: babel.cfg  itsochi.lektorproject
itsochi/configs/: i18n.ini
itsochi/content/: contents+en.lr  contents.lr
itsochi/databags/: links.ini
itsochi/models/: job.ini  (+12 more)
js/: index.js
markup/: .editorconfig  .eslintignore  .eslintrc.js  .gitignore  README.md  package.json  postcss.config.js  webpack.config.js
organizers/: index.html
poetry-itsochi/: pyproject.toml
poetry-itsochi/tests/: test_poetry_itsochi.py
privacy-policy/: index.html
speakers/: index.html
(+247 files in other folders)
