[tool.poetry]
name = "poetry-itsochi"
version = "0.1.0"
description = "IT-Sochi community"
authors = ["rodionpost <postanogov.work@gmail.com>"]
license = ""
readme = "README.MD"
homepage = ""
repository = "https://github.com/itsochi-community/site"
documentation = ""

[tool.poetry.dependencies]
python = "^3.8"
Lektor = "^3.2.0"
lektor-i18n = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"